samples/_failures_safe/1761040110_b0c1a4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7307600e.c: In function ‘main’:
./samples/SAFE/__tmp_7307600e.c:142:9: error: expected declaration or statement at end of input
  142 |         cleanup_buffer(&compressed);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_7307600e.c:142:9: error: expected declaration or statement at end of input
